--- a/gtd.html
+++ b/gtd.html
@@ -35,7 +35,10 @@
       s.parentNode.insertBefore(tc, s);
     })();
     window.TalkCenter = {
-      token: 'dd61c926ca7baf9075a98c2696c15a2c'
+      token: 'dd61c926ca7baf9075a98c2696c15a2c',
+      settings: {
+	      use_botcenter: true
+      }
     };
   </script>
 </body>
