--- a/contracts_test.html
+++ b/contracts_test.html
@@ -37,6 +37,8 @@
     window.TalkCenter = {
       token: '2f3678a4fe086ce586bd52489be9a874',
       settings: {
+	      user_id: "tester@adere.so",
+	      user_email: "tester@adere.so",
 	      use_botcenter: true
       }
     };
