--- a/contracts_test.html
+++ b/contracts_test.html
@@ -24,24 +24,6 @@
 </style>
 </head>
 <body>
-    <script type="text/javascript">
-    var urlParams = new URLSearchParams(window.location.search);
-    (function() {
-      var tc = document.createElement("script");
-      tc.type = "text/javascript";
-      tc.async = true;
-      tc.src = "https://app.talkcenter.io/v2/talkcenter.min.js";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(tc, s);
-    })();
-    window.TalkCenter = {
-      token: '2f3678a4fe086ce586bd52489be9a874',
-      settings: {
-	      user_id: "tester@adere.so",
-	      user_email: "tester@adere.so",
-	      use_botcenter: true
-      }
-    };
-  </script>
+    <iframe src="https://app.talkcenter.io/v2/app.html?token=2f3678a4fe086ce586bd52489be9a874&hostname=botcenter.github.io&account_author=false&anonymous_user=false&avatar=https%3A%2F%2Fstorage.googleapis.com%2Fpostcenter-prod-files-2018%2Fimage%2FAYFMHUTDNL2A%2F655e68c8_6250971f_IsotipoAdereso.jpg&aws_socketurl=wss%3A%2F%2Fwebsocket.talkcenter.io%2Fprod&backend_url=https%3A%2F%2Fservice.talkcenter.io%2Fbackend&chat_button_large=false&chat_side=false&color=%23082CB4&contact_form_account=0&contact_form_fallback=false&contact_form_fallback_account=false&contact_form_fallback_email=false&cookie_file_protection=0&domain=botcenter.github.io&email_as_id=false&fb_login=false&google_login=false&hidden=false&is_embedded=false&locale=es&disclaimer_login=false&disclaimer_login_content=&logo=https%3A%2F%2Fstorage.googleapis.com%2Fpostcenter-prod-files-2018%2Fimage%2FAYFMHTS4JVYA%2F655e6885_6250971f_IsotipoAdereso.jpg&message_attachment_button=true&mini_chat_can_reply=false&mini_chat_max_messages=1&only_social_login=false&open_on_device=any&open_onload=true&open_onload_delay=0&open_onload_device=any&request_country_id=false&validate_rut=false&request_phone=false&request_validate_rut=false&show_close_button=true&show_open_button=any&show_messages_history=true&sound_notifications=false&text_color=%23ffffff&text_talk_center=Adereso%20Chat&title=Demo%20Assistant&welcome_message_delay=0&welcome_message_device=any&welcome_message_frequency=5&welcome_message_persistent=false&welcome_message_show=false&use_botcenter=true&user_id=tester%40adere.so&user_email=tester%40adere.so&answer_sla_unit=MINUTES&answer_sla_value=20&auto_close_ticket_message_active=false&away_message_active=false&away_message_minute_threshold=180&case_notifications=0&close_ticket_message_active=false&close_ticket_message_answered=true&containment_active=false&containment_max_retries=5&containment_minute_threshold=0&create_closed_cases=false&enable_autoassignation=true&enable_ticket_creation=true&first_contact_message_active=false&important_keywords=%5B%5D&important_keywords_active=false&new_ticket_active=false&no_client_reply_close=false&no_client_reply_close_time=7&no_client_reply_close_unit=DAYS&out_work_hours_active=false&out_work_hours_case_action=0&separate_public_from_private_cases=true" class="tc-window">
 </body>
 </html>
