--- a/contracts_test.html
+++ b/contracts_test.html
@@ -2,24 +2,21 @@
 <html>
 <head>
 <style>
-	body {
-        background-image: linear-gradient(to bottom right, #363675, #1692ff);
-        margin: 0;
+    html {
+        height: 100%;
     }
-
-    .iframe-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh; /* Ocupa el 100% de la altura de la ventana del navegador */
+	body {
+        height: 100%;
+        margin: 0;
     }
 
     .tc-window {
         display: block;
         border: none;
-        width: 600px; /* Establece el ancho fijo que desees, por ejemplo, 800px */
+        width: 800px;
         height: 100%;
-        max-width: 100%; /* Asegura que el iframe no sea más grande que el contenedor */
+        max-width: 100%;
+        margin: auto;
     }
 </style>
 </head>
