--- a/contracts_test.html
+++ b/contracts_test.html
@@ -13,10 +13,20 @@
     .tc-window {
         display: block;
         border: none;
-        width: 800px;
+        width: 640px;
         height: 100%;
         max-width: 100%;
         margin: auto;
+    }
+    .tc-window-body-message-content {
+        font-size: 16px;
+        line-height: 22px;
+        max-width: 100%;
+    }
+
+    .tc-window-body-message.agent .tc-window-body-message.agent {
+        padding: 8px 0;
+        background-color: none;
     }
 </style>
 </head>
