--- a/contracts_test.html
+++ b/contracts_test.html
@@ -24,7 +24,7 @@
         max-width: 100%;
     }
 
-    .tc-window-body-message.agent .tc-window-body-message.agent {
+    .tc-window-body-message.agent .tc-window-body-message-content {
         padding: 8px 0;
         background-color: none;
     }
